travis: Enable build

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ before_script:
 script:
   - conda env create -f symeapi.yml
   - conda activate symeapi
-  - cat /home/travis/build/symengine/api-docs/docs/doxyrestConf.lua
-  # - rake api:mkDocs
+  - rake api:mkDocs
 
 before_cache:
   - mkdir -p $HOME/nix.store
