--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
 script:
   - conda env create -f symeapi.yml
   - conda activate symeapi
-  - rake api:mkDocs[html,nix]
+  - rake api:mkDocs
 
 before_cache:
   - mkdir -p $HOME/nix.store
