--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,7 @@ before_script:
 script:
   - conda env create -f symeapi.yml
   - conda activate symeapi
-  - rake api:mkDoxy[nix]
-  - rake api:mkDoxyRest[html,nix]
-  - rake api:mkSphinx[html,nix]
+  - rake api:mkDocs[html,nix]
 
 before_cache:
   - mkdir -p $HOME/nix.store
