--- a/symeapi.yml
+++ b/symeapi.yml
@@ -18,3 +18,4 @@ dependencies:
       - coverxygen
       - exhale
       - sphinx-nervproject-theme
+      - git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
