theme: Try furo

--- a/symeapi.yml
+++ b/symeapi.yml
@@ -19,3 +19,4 @@ dependencies:
       - exhale
       - sphinx-nervproject-theme
       - git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
+      - furo
